--- a/Homeworks/HW10/Students/ThanhVan.ipynb
+++ b/Homeworks/HW10/Students/ThanhVan.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,57 +55,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def BSTmin(root):\n",
-    "    min = None\n",
-    "    if not root:\n",
-    "        return None\n",
-    "    if root.left == None:\n",
-    "        min = root.data\n",
-    "    else:\n",
-    "        return BSTmin(root.left)\n",
-    "    return min\n",
-    "\n",
-    "def BSTis(root, key):\n",
-    "    iskey = False\n",
-    "    if not root:\n",
-    "        return False\n",
-    "    if root.data == key:\n",
-    "        iskey = True\n",
-    "    else:\n",
-    "        if root.data < key:\n",
-    "            return BSTis(root.right, key)\n",
-    "        else:\n",
-    "            return BSTis(root.left, key)\n",
-    "    return iskey"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1, True, False)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimal value: 1\n",
+      "Value 9 not found in tree\n",
+      "Value 6 found in tree\n"
+     ]
     }
    ],
    "source": [
-    "def BST(root):\n",
-    "    min = BSTmin(root)\n",
-    "    is6 = BSTis(root, 6)\n",
-    "    is9 = BSTis(root, 9)\n",
-    "    return min, is6, is9\n",
-    "BST(root)"
+    "def find_min(tree_node):  \n",
+    "    if tree_node.left is None:\n",
+    "        return tree_node.data\n",
+    "    else:\n",
+    "        return find_min(tree_node.left)  \n",
+    "\n",
+    "\n",
+    "def exist(tree_node, num):\n",
+    "    \n",
+    "    if num > tree_node.data:  \n",
+    "        if tree_node.right is None:  \n",
+    "            return False\n",
+    "        else:\n",
+    "            return exist(tree_node.right, num)\n",
+    "    \n",
+    "    elif num < tree_node.data:    \n",
+    "        if tree_node.left is None:  \n",
+    "            return False\n",
+    "        else:\n",
+    "            return exist(tree_node.left, num)\n",
+    " \n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('Minimal value: {}'.format(find_min(root)))\n",
+    "print('Value {}{} found in tree'.format(9, ' not'*(not exist(root, 9))))\n",
+    "print('Value {}{} found in tree'.format(6, ' not'*(not exist(root, 6))))"
    ]
   }
  ],
