--- a/Test/Midterm/midterm-evaluation.ipynb
+++ b/Test/Midterm/midterm-evaluation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "File `'midterm-solutions.ipynb.py'` not found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\core\\magics\\execution.py:696\u001b[0m, in \u001b[0;36mExecutionMagics.run\u001b[1;34m(self, parameter_s, runner, file_finder)\u001b[0m\n\u001b[0;32m    695\u001b[0m     fpath \u001b[39m=\u001b[39m arg_lst[\u001b[39m0\u001b[39m]\n\u001b[1;32m--> 696\u001b[0m     filename \u001b[39m=\u001b[39m file_finder(fpath)\n\u001b[0;32m    697\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mIndexError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\utils\\path.py:91\u001b[0m, in \u001b[0;36mget_py_filename\u001b[1;34m(name)\u001b[0m\n\u001b[0;32m     90\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 91\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mFile `\u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m` not found.\u001b[39m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m name)\n",
+      "\u001b[1;31mOSError\u001b[0m: File `'midterm-solutions.ipynb.py'` not found.",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\peppe\\HDT-CSI04\\Test\\Midterm\\midterm-evaluation.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000003?line=0'>1</a>\u001b[0m get_ipython()\u001b[39m.\u001b[39;49mrun_line_magic(\u001b[39m'\u001b[39;49m\u001b[39mrun\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mmidterm-solutions.ipynb import find_mode, buy_icecream, has_sequence_with_sum, count_swap, find_word, find_closest_distance\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000003?line=1'>2</a>\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mrun\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mmidterm-testcases.ipynb\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000003?line=3'>4</a>\u001b[0m current_submission \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mmidterm-solutions.ipynb\u001b[39m\u001b[39m'\u001b[39m\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\core\\interactiveshell.py:2305\u001b[0m, in \u001b[0;36mInteractiveShell.run_line_magic\u001b[1;34m(self, magic_name, line, _stack_depth)\u001b[0m\n\u001b[0;32m   2303\u001b[0m     kwargs[\u001b[39m'\u001b[39m\u001b[39mlocal_ns\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_local_scope(stack_depth)\n\u001b[0;32m   2304\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuiltin_trap:\n\u001b[1;32m-> 2305\u001b[0m     result \u001b[39m=\u001b[39m fn(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m   2306\u001b[0m \u001b[39mreturn\u001b[39;00m result\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\IPython\\core\\magics\\execution.py:707\u001b[0m, in \u001b[0;36mExecutionMagics.run\u001b[1;34m(self, parameter_s, runner, file_finder)\u001b[0m\n\u001b[0;32m    705\u001b[0m     \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mnt\u001b[39m\u001b[39m'\u001b[39m \u001b[39mand\u001b[39;00m re\u001b[39m.\u001b[39mmatch(\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m^\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.*\u001b[39m\u001b[39m'\u001b[39m\u001b[39m$\u001b[39m\u001b[39m\"\u001b[39m,fpath):\n\u001b[0;32m    706\u001b[0m         warn(\u001b[39m'\u001b[39m\u001b[39mFor Windows, use double quotes to wrap a filename: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39mun \u001b[39m\u001b[39m\"\u001b[39m\u001b[39mmypath\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mmyfile.py\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m--> 707\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(msg) \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n\u001b[0;32m    708\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m    709\u001b[0m     \u001b[39mif\u001b[39;00m fpath \u001b[39min\u001b[39;00m sys\u001b[39m.\u001b[39mmeta_path:\n",
+      "\u001b[1;31mException\u001b[0m: File `'midterm-solutions.ipynb.py'` not found."
+     ]
+    }
+   ],
    "source": [
     "%run midterm-solutions.ipynb import find_mode, buy_icecream, has_sequence_with_sum, count_swap, find_word, find_closest_distance\n",
     "%run midterm-testcases.ipynb\n",
@@ -53,18 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['submissions/NgoQuangViet-CSIMidtermTest.ipynb',\n",
-       " 'submissions/SampleFullName-CSIMidtermTest.ipynb',\n",
-       " 'submissions/SampleFullName-CSIMidtermTest copy.ipynb']"
+       "['submissions/DangThanhVan-CSIMidtermTest.ipynb',\n",
+       " 'submissions/SampleFullName-CSIMidtermTest.ipynb']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,19 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3\n",
       "Correct answer on sample test!\n",
       "Correct answer on sample test!\n",
-      "Invalid submission or Wrong answer!\n",
-      "Invalid submission or Wrong answer!\n",
-      "Invalid submission or Wrong answer!\n",
-      "Invalid submission or Wrong answer!\n"
+      "Correct answer on sample test!\n",
+      "Correct answer on sample test!\n",
+      "is chasing rat\n",
+      "Correct answer on sample test!\n",
+      "Correct answer on sample test!\n"
      ]
     }
    ],
@@ -107,190 +127,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testing on submissions/NgoQuangViet-CSIMidtermTest.ipynb\n",
-      "===============================================\n",
-      "Testing on problem 1/6...\n",
-      "Testing on problem 2/6...\n",
-      "Testing on problem 3/6...\n",
-      "Testing on problem 4/6...\n",
-      "Testing on problem 5/6...\n",
-      "Testing on problem 6/6...\n",
-      "===============================================\n",
-      "Total Test Cases Passed: 20/60\n",
-      "Total Points: 40/120\n"
+      "Testing on submissions/DangThanhVan-CSIMidtermTest.ipynb\n",
+      "===============================================\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Problem 1</th>\n",
-       "      <th>Problem 2</th>\n",
-       "      <th>Problem 3</th>\n",
-       "      <th>Problem 4</th>\n",
-       "      <th>Problem 5</th>\n",
-       "      <th>Problem 6</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Test 1</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 2</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 3</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 4</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 5</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 6</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 7</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 8</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 9</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Test 10</th>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>PASSED</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "      <td>WRONG ANSWER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total</th>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Problem 1 Problem 2     Problem 3     Problem 4     Problem 5  \\\n",
-       "Test 1     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 2     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 3     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 4     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 5     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 6     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 7     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 8     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 9     PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Test 10    PASSED    PASSED  WRONG ANSWER  WRONG ANSWER  WRONG ANSWER   \n",
-       "Total          10        10             0             0             0   \n",
-       "\n",
-       "            Problem 6  \n",
-       "Test 1   WRONG ANSWER  \n",
-       "Test 2   WRONG ANSWER  \n",
-       "Test 3   WRONG ANSWER  \n",
-       "Test 4   WRONG ANSWER  \n",
-       "Test 5   WRONG ANSWER  \n",
-       "Test 6   WRONG ANSWER  \n",
-       "Test 7   WRONG ANSWER  \n",
-       "Test 8   WRONG ANSWER  \n",
-       "Test 9   WRONG ANSWER  \n",
-       "Test 10  WRONG ANSWER  \n",
-       "Total               0  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'test1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\peppe\\HDT-CSI04\\Test\\Midterm\\midterm-evaluation.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 26>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000008?line=20'>21</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mTotal Points: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m/120\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(tests_passed\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000008?line=22'>23</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m result_df\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000008?line=25'>26</a>\u001b[0m evaluate()\n",
+      "\u001b[1;32mc:\\Users\\peppe\\HDT-CSI04\\Test\\Midterm\\midterm-evaluation.ipynb Cell 9\u001b[0m in \u001b[0;36mevaluate\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000008?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m===============================================\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000008?line=5'>6</a>\u001b[0m func_list \u001b[39m=\u001b[39m [find_mode, buy_icecream, has_sequence_with_sum, count_swap, find_word, find_closest_distance]\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000008?line=6'>7</a>\u001b[0m test_func_list \u001b[39m=\u001b[39m [test1, test2, test3, test4, test5, test6]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000008?line=7'>8</a>\u001b[0m result_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/peppe/HDT-CSI04/Test/Midterm/midterm-evaluation.ipynb#ch0000008?line=9'>10</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, func \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(func_list):\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test1' is not defined"
+     ]
     }
    ],
    "source": [
@@ -331,11 +189,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "245cc435fe8701059561108fec3fd7c748240250fa2e2b5e714b4f6827c3f344"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -349,7 +204,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
   }
  },
  "nbformat": 4,
