--- a/Labs/Lab11/Lab 11. Thuật Toán Tìm Đường (1).ipynb
+++ b/Labs/Lab11/Lab 11. Thuật Toán Tìm Đường (1).ipynb
@@ -285,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +299,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "245cc435fe8701059561108fec3fd7c748240250fa2e2b5e714b4f6827c3f344"
+   }
   }
  },
  "nbformat": 4,
